syntax = "proto3";

package ru.otus.protobuf.generated;
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message MessageRequest {
  int64 firstNumber = 1;
  int64 lastNumber = 2;
}

message MessageResponse {
  int64 number = 1;
}

service RemoteService {
  rpc getNumbers(MessageRequest) returns (stream MessageResponse);
}
